src/objects/Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Analyse_the_Vision_Reality_Gap__c</fullName>
        <label>A - Analyse the Vision/Reality Gap</label>
        <picklist>
            <controllingField>Purpose_of_Coaching_Session__c</controllingField>
            <picklistValues>
                <fullName>Vision: How would it be if we did not have the problem? The ideal outcome we are looking for.  Reality: history, causes, implications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reality: Gain an understanding of the situation; the causes (from the coachee&apos;s perspecitive), their rationale, Once understood, reflect the full picture back. Vision: Confirm understanding of the level of performance/behaviour expected.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision: Detail the ideal end result we are striving for. Reality: Describe the present state, the changes that will be made to bridge the gap plus implications for coach and coachee. Detail any changes in expectation of the coachee.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision: Detail the end-result we are striving for. Reality: Where we are relative to the end-result. What work has already been completed. What still needs to be done. Any dependencies.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Challenges_or_Difficulties__c</fullName>
        <label>Anticipated Challenges or Difficulties</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anticipated_Measures_of_Success__c</fullName>
        <label>Anticipated Measures of Success</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approach_Phase__c</fullName>
        <label>Approach Phase</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C1_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C2_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C_Considerations_and_Choices__c</fullName>
        <label>C - Considerations and Choices</label>
        <picklist>
            <controllingField>Purpose_of_Coaching_Session__c</controllingField>
            <picklistValues>
                <fullName>Consider the alternatives or options to resolve the issue, possible changes that need to take place, and choose which to pursue.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State the valid points, remove invalid points (reasons). Consider all alternatives, possible changes that need to take place, and choose which to pursue.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How do you feel these changes will impact you? How will you deal with the impacts? What options do you have to make it work? What are the potential conflicts you forsee? How are you going to overcome them?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider the strategies to move forward. Choose a plan of action. Check level of confidence, skills, attitude.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Contextualise_the_Situation__c</fullName>
        <label>C - Contextualise the Situation</label>
        <picklist>
            <controllingField>Purpose_of_Coaching_Session__c</controllingField>
            <picklistValues>
                <fullName>Background to the Problem. How problem relates to a bigger goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide context to the issue you are going to discuss with them by stating the norms of behaviour expected by the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide info that gives context to the changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide background to the task that needs to be accomplished.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Objective_Rating__c</fullName>
        <label>Call Objective Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Objectives__c</fullName>
        <label>Call Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Planning__c</fullName>
        <label>Call Planning</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Career_Path_Level__c</fullName>
        <label>Career Path Level</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR TM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR TM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coaching_Day_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Coaching Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coaching_Role__c</fullName>
        <label>Coaching Role</label>
        <picklist>
            <picklistValues>
                <fullName>Observe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Commitment_Rating__c</fullName>
        <label>Customer Commitment Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Commitment__c</fullName>
        <label>Customer Commitment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Discussion_Rating_Number__c</fullName>
        <formula>CASE(  Customer_Discussion_Rating__c  , 
&quot;A&quot;, &quot;5&quot;, 
&quot;B+&quot;, &quot;4&quot;, 
&quot;B&quot;, &quot;3&quot;, 
&quot;B-&quot;, &quot;2&quot;, 
&quot;C&quot;, &quot;1&quot;, 
&quot;N/A&quot;, &quot;&quot; , 
&quot;&quot;)</formula>
        <label>Customer Discussion Rating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Discussion_Rating__c</fullName>
        <label>Customer Discussion Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Discussion__c</fullName>
        <label>Customer Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Development_Action_Items__c</fullName>
        <label>Deal Development Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Outcomes__c</fullName>
        <label>Desired Outcomes</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_Phase__c</fullName>
        <label>Discovery Phase</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>AFCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emotional_Intelligence__c</fullName>
        <label>Emotional Intelligence</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_Summary__c</fullName>
        <label>Feedback Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G_Goal__c</fullName>
        <inlineHelpText>Goal: The coaching process begins by the coach helping the coachee establish a clear goal for the conversation. The coach is able to establish a clear understanding of the goal by
identifying a specific outcome, asking effective questions.</inlineHelpText>
        <label>G - Goal</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Skill_Development__c</fullName>
        <label>General Skill Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>H_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Howww_Who_will_do_What_by_When__c</fullName>
        <label>Howww - Who will do What by When</label>
        <picklist>
            <controllingField>Purpose_of_Coaching_Session__c</controllingField>
            <picklistValues>
                <fullName>Agree action plan, accountabilities &amp; timelines.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-confirm changes in expectation &amp; timelines. Actions to be taken.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm the actions, accountabilities &amp; timelines.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_of_Customer__c</fullName>
        <label>Knowledge of Customer</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Follow_up_Commitments__c</fullName>
        <label>Manager Follow-up Commitments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective_Rating_Number__c</fullName>
        <formula>CASE(  Next_Call_Objective_Rating__c  , 
&quot;A&quot;, &quot;5&quot;, 
&quot;B+&quot;, &quot;4&quot;, 
&quot;B&quot;, &quot;3&quot;, 
&quot;B-&quot;, &quot;2&quot;, 
&quot;C&quot;, &quot;1&quot;, 
&quot;N/A&quot;, &quot;&quot; , 
&quot;&quot;)</formula>
        <label>Next Call Objective Rating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective_Rating__c</fullName>
        <label>Next Call Objective Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Objective_for_the_session__c</fullName>
        <label>O - Objective for the session</label>
        <picklist>
            <controllingField>Purpose_of_Coaching_Session__c</controllingField>
            <picklistValues>
                <fullName>What do we want to get out of the session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To review your performance/behaviour against this expectation, specifically ... (what you did, when you did it, why it is a problem, call for a change)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To brief you on how these changes will affect you, to understand how you feel about them, and to confirm with you any changes in expectation.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To work through the task with you to come up with the strategies, objectives and actions that will accomplish the task.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Options_Obstacles__c</fullName>
        <inlineHelpText>Once the current situation is defined, it is time to develop options or possible solutions. Coach facilitates a brainstorming session with the person asking questions and drawing out the person’s ideas. Coachee identifies possible actions to explore.</inlineHelpText>
        <label>O - Options/Obstacles</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planning_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planning Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Drilldown_Questions__c</fullName>
        <label>Potential Drilldown Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Methods_for_Handling__c</fullName>
        <label>Potential Methods for Handling</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Planning_Status__c</fullName>
        <label>Pre Call Planning Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation_Phase__c</fullName>
        <label>Presentation Phase</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Call_Objective__c</fullName>
        <inlineHelpText>Use this field to describe the key areas you would like to work on for this coaching session.</inlineHelpText>
        <label>Primary Objective for Coaching Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge__c</fullName>
        <label>Product Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Coaching_Session__c</fullName>
        <label>Purpose of Coaching Session</label>
        <picklist>
            <picklistValues>
                <fullName>Problem Solving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addressing Behaviour/Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Announcing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_Reality__c</fullName>
        <inlineHelpText>When a clear goal is established, the next step is to describe the reality of the situation. What is the current level of performance? What is the challenge faced by the person? What factors are contributing to the situation?</inlineHelpText>
        <label>R - Reality</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reps_Follow_up_Commitments__c</fullName>
        <label>Reps Follow-up Commitments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Career_Path_Level__c</fullName>
        <label>Sales Career Path Level</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR TM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR TM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Coach_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coach Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Review_Date__c</fullName>
        <label>Manager Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Negotiation_Phase__c</fullName>
        <label>Sales Negotiation Phase</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Exceeds Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Opportunity to display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Process_Skills_Focus__c</fullName>
        <inlineHelpText>Use this field to describe the area of sales process skills you would like to work on for this coaching session</inlineHelpText>
        <label>Sales Process Skills Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Review_Date__c</fullName>
        <label>Territory Manager Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Review_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Manager Review Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Manager Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_coaching_day_planning_reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send coaching day planning reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill_Development_Action_Items__c</fullName>
        <label>Skill Development Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Development_Plan__c</fullName>
        <inlineHelpText>Sales Managers should use this field to highlight specific areas of focus for this coaching day.  This field is visible to both coachee and Manager</inlineHelpText>
        <label>Skill Development Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Agenda_Items__c</fullName>
        <label>Specific Agenda Items</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>